[gd_scene load_steps=5 format=3 uid="uid://di3hdauge7355"]

[ext_resource type="Script" uid="uid://p3dkht3mu3v4" path="res://battle/ui/selected_ship/selected_ship_ui.gd" id="1_vewgr"]
[ext_resource type="Texture2D" uid="uid://bk803hmjyl787" path="res://_assets/ui_green/square481.png" id="1_yscky"]
[ext_resource type="PackedScene" uid="uid://0nuprobqolmm" path="res://battle/ui/selected_ship/waypoint_draw.tscn" id="2_ut3gy"]
[ext_resource type="PackedScene" uid="uid://b3oqkpie3j7tw" path="res://battle/ui/selected_ship/sensor_radius_draw.tscn" id="4_33cls"]

[node name="SelectedShipUI" type="Node2D"]
script = ExtResource("1_vewgr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yscky")

[node name="WaypointDraw" parent="." instance=ExtResource("2_ut3gy")]

[node name="SensorRadiusDraw" parent="." instance=ExtResource("4_33cls")]
